# oauth-master

./: .gitignore  LICENSE  README.md  create_index.py  main.py  pyproject.toml  run_dry.py  run_query.py  settings.py
data/: links.txt
data/raw/: rfc6749.html
data/spec/: rfc6749.html
index/: __init__.py  constants.py  create_index.py  dry.py  get_index.py  save_index.py
query/: __init__.py  run_query.py
tools/: __init__.py  calculate_cost.py  spec_to_text.py
